10º commit - Adicionei outro parágrafo no index.html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
     <p>
         A branch new-feature foi criada a partir da branch main, é nela que podemos fazer alterações e depois fazer um pull request.
     </p>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quisquam ratione amet aut illum blanditiis aperiam dignissimos eos delectus. Eligendi, beatae minus! Harum nam earum odit repellendus temporibus reprehenderit vitae.
+    </p>
+
 </body>
 </html>
